--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "gboost-ui": "^0.5.0",
+    "@aws-amplify/ui-react": "^2.9.0",
+    "aws-amplify": "^4.3.15",
+    "gboost-ui": "^0.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
